--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,36 +9,47 @@ on:
 
 
 jobs:
-
-  docker:
-    runs-on: ubuntu-latest
-
+  build:
+    name: Build Docker Image
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            paulomartde/fast_texlive
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=raw,value=latest
+            type=sha
 
-      - name: Get version
-        run: |
-          echo "VERSION=$( git rev-parse HEAD )" >> $GITHUB_ENV
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
-      - name: Build Docker Image
-        run: |
-          docker build \
-            --tag paulomartde/fast_texlive:$VERSION \
-            --file Dockerfile .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-      - name: Tag master Release Docker Image
-        if: github.ref == 'refs/heads/master'
-        run: |
-          docker tag paulomartde/fast_texlive:$VERSION paulomartde/fast_texlive:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Show Docker Images
-        run: docker images
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: Login to Docker
-        run: echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_PASS: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-      - name: Push Docker Image
-        run: docker push paulomartde/fast_texlive
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: |-
+              linux/amd64
+              linux/arm64
+          file: ./Dockerfile
+          pull: true
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha
